# datagouv_tools

./: .gitignore  .travis.yml  README-en.rst  README.rst  import_sirene.py  import_sirene_test.py  requirements.txt  setup.cfg  setup.py  tox.ini
datagouv_tools/: dg_script.py  fantoir.py  fichier_personnes_decedees.py  import_fantoir.py  import_generic.py  import_sirene.py  util.py
datagouv_tools/sql/: __init__.py  generic.py  mariadb.py  postgresql.py  sql_type.py  sqlite.py
tests/: test_fantoir.py  test_fichier_personnes_decedees.py  test_import_fantoir.py  test_import_sirene.py  test_util.py
tests/resources/: create_sample.sh
tests/resources/sirene/: dessinstocketablissement_reduit.csv  dessinstocketablissementhistorique_reduit.csv  dessinstocketablissementlienssuccession_reduit.csv  dessinstockunitelegale_reduit.csv
tests/sql/: __init__.py  test_generic.py  test_mariadb.py  test_postgres.py  test_sql_types.py  test_sqlite.py
