[metadata]
name=datagouv_tools
version=0.0.1
description=DataGouv Tools is an utility to import the SIRENE database to PostgreSQL and other DBMS
long-description = file: README.rst
url=https://github.com/jferard/datagouv_tools
author=Julien Férard
license=GPLv3
packages=['datagouv_tools', 'datagouv_tools.sql']
scripts=['scripts/dg_script']
include_package_data = True
python_requires=>=3.7
zip_safe=True

classifiers=
        Development Status :: 3 - Alpha
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Topic :: Database :: Front-Ends
        GNU General Public License v3 or later (GPLv3+)
        Programming Language :: Python :: 3

keywords=data gouv postgresql database sirene fantoir sqlite
test_suite=tests, datagouv_tools

[coverage:report]
show_missing = true

[coverage:run]
source = datagouv_tools

[tools:pytest]
python_files = *.py
addopts = --cov-report term-missing --doctest-modules datagouv_tools --cov=datagouv_tools --flake8

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[options.extras_require]
# Add here additional requirements for extra features, like:
all =
        pg8000
        mysql-connector-python
testing =
    flake8  # required for system tests
    pytest
    pytest-cov

[options.entry_points]
console_scripts = datagouv_tools = datagouv_tools.dg_tools_script:main